--- a/program.qmd
+++ b/program.qmd
@@ -16,6 +16,17 @@ about:
       href: https://github.com
 ---
 
+```{r}
+library(lubridate)
+library(tidyverse)
+library(gt)
+library(gtExtras)
+library(leaflet)
+library(plotly)
+library(viridis)
+library(hrbrthemes)
+```
+
 ```{r }
 #| title: Summary Update
 #| width: 60%
