--- a/sudancrisis.qmd
+++ b/sudancrisis.qmd
@@ -16,4 +16,4 @@ about:
 
 ---
 
-About this blog
+On April 15th, 2023, violent clashes erupted between the Sudanese Armed Forces (SAF) and the paramilitary Rapid Support Forces (RSF) in Sudan, resulting in the displacement of more than 10.2 million people, including internally displaced people (IDPs), asylum seekers and refugees. This conflict exacerbated many of Sudan’s existing challenges, including ongoing conflicts, disease outbreaks, economic and political instability and climate emergencies. 
