renv library again

--- a/program.qmd
+++ b/program.qmd
@@ -17,6 +17,7 @@ about:
 ---
 
 ```{r}
+library(tidyverse)
 
 #install.packages("pacman")
 #pacman::p_load(renv, lubridate, tidyverse, gt, gtExtras, leaflet, plotly, viridis, hrbrthemes   )
